unpackaged/main/default/objects/FSL_SLA_Arrival_Window__c/FSL_SLA_Arrival_Window__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>FSL SLA Arrival Window</label>
</CustomObject>