unpackaged/main/default/objects/FSL_SLA_Arrival_Window__c/fields/LS_SLA__c.field-meta.xml
<CustomField>
    <fullName>LS_SLA__c</fullName>
    <label>LS SLA</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>