unpackaged/main/default/objects/FSL_SLA_Arrival_Window__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Work Order Priority</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>