unpackaged/main/default/objects/FSL_SLA_Arrival_Window__c/fields/Scheduling_Policy__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Policy__c</fullName>
    <label>Scheduling Policy</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>