unpackaged/main/default/objects/FSL_SLA_Arrival_Window__c/listViews/SLA_Arrival_Window_View.listView-meta.xml
<ListView>
    <fullName>SLA_Arrival_Window_View</fullName>
    <columns>NAME</columns>
    <columns>Service_Territory__c</columns>
    <columns>Priority__c</columns>
    <columns>Scheduling_Policy__c</columns>
    <columns>LS_SLA__c</columns>
    <columns>Tow_SLA__c</columns>
    <filterScope>Everything</filterScope>
    <label>SLA - Arrival Window View</label>
    <language>en_US</language>
</ListView>